<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blank">

    <ImageButton
        android:id="@+id/imageButton_volume"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/soundofficon" />

    <ToggleButton
        android:id="@+id/toggleButton_placePiece"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:checked="false"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="624dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:divider="@android:drawable/dark_header"
            android:padding="0dp">

            <ImageButton
                android:id="@+id/tile_5.0"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile00"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_5.1"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile01"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_5.2"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile02"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_5.3"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile03"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_5.4"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile04"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:divider="@android:drawable/dark_header"
            android:padding="0dp">

            <ImageButton
                android:id="@+id/tile_4.0"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile10"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_4.1"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile11"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_4.2"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile12"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_4.3"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile13"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_4.4"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile14"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:divider="@android:drawable/dark_header"
            android:padding="0dp">

            <ImageButton
                android:id="@+id/tile_3.0"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile20"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_3.1"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile21"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_3.2"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile22"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_3.3"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile23"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_3.4"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile24"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:divider="@android:drawable/dark_header"
            android:padding="0dp">

            <ImageButton
                android:id="@+id/tile_2.0"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile30"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_2.1"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile31"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_2.2"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile32"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_2.3"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile33"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_2.4"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile34"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:divider="@android:drawable/dark_header"
            android:padding="0dp">

            <ImageButton
                android:id="@+id/tile_1.0"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile40"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_1.1"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile41"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_1.2"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile42"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_1.3"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile43"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />

            <ImageButton
                android:id="@+id/tile_1.4"
                android:layout_width="75dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:contentDescription="@string/tile44"
                android:scaleType="fitCenter"
                android:src="@drawable/blank" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/player1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/player1"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/player2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


