<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    android:backgroundTint="#EA981E"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/welcome"
        android:shadowColor="@color/cardview_shadow_start_color"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/welcome"
        android:textColor="@color/design_default_color_primary"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="32dp"
        android:shadowColor="@color/cardview_shadow_start_color"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/to"
        android:textColor="@color/purple_500"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome" />

    <TextView
        android:id="@+id/textView_crossmind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:shadowColor="@color/cardview_shadow_start_color"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/crossmind"
        android:textColor="@color/purple_700"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_to" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start">

        <RadioButton
            android:id="@+id/radioButton_onePlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onePlayer" />

        <RadioButton
            android:id="@+id/radioButton_twoPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/twoPlayers" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>